--- a/package.json
+++ b/package.json
@@ -9,6 +9,14 @@
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
+  "author": {
+    "name": "blacksonic",
+    "email": "soos.gabor86@gmail.com"
+  },
+  "license": "ISC",
+  "keywords": [
+    "todomvc"
+  ],
   "private": true,
   "dependencies": {
     "@angular/animations": "~10.0.14",
@@ -16,12 +24,20 @@
     "@angular/compiler": "~10.0.14",
     "@angular/core": "~10.0.14",
     "@angular/forms": "~10.0.14",
+    "@angular/http": "^7.2.16",
     "@angular/platform-browser": "~10.0.14",
     "@angular/platform-browser-dynamic": "~10.0.14",
     "@angular/router": "~10.0.14",
+    "core-js": "^3.6.5",
+    "crypto": "^1.0.1",
+    "localStorage": "^1.0.4",
+    "node-uuid": "^1.4.8",
     "rxjs": "~6.5.5",
+    "rxjs-compat": "^6.6.2",
+    "todomvc-app-css": "^2.3.0",
+    "todomvc-common": "^1.0.5",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.3"
+    "zone.js": "^0.10.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1000.8",
